Fixed footer spacing issue

--- a/resources/style.css
+++ b/resources/style.css
@@ -5,14 +5,15 @@
   font-size: 14px
   font-weight: bold;
   display: flex;
-  border-bottom: solid black .5px;
-  align-content: flex-end;
+  border-bottom: solid black 1px;
+  align-items: center;
   justify-content: space-between;
   position: fixed;
-  z-index: 5;
+  z-index: 1;
   width: 100%;
-height: 80px;
+  height: 80px;
   background-color: white;
+  margin: 0;
 
 }
 
@@ -79,7 +80,8 @@ text-decoration: underline;
   display: inline-flex;
   position: relative;
   top: 100px;
-  bottom: 500px;
+  bottom: 80px;
+  margin-bottom: 80px;
 }
 
 .phish{
